WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103320
[EFL] Unreviewed build fix after
r135767
without Tiled Backing Store
https://bugs.webkit.org/show_bug.cgi?id=103320
Summary
[EFL] Unreviewed build fix after r135767 without Tiled Backing Store
Ryuan Choi
Reported
2012-11-26 16:50:45 PST
IntPoint is not included in Plugin.h and Plugin.cpp
Attachments
Patch
(1.58 KB, patch)
2012-11-26 16:52 PST
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2012-11-26 16:52:33 PST
Created
attachment 176111
[details]
Patch
WebKit Review Bot
Comment 2
2012-11-26 17:35:55 PST
Comment on
attachment 176111
[details]
Patch Clearing flags on attachment: 176111 Committed
r135791
: <
http://trac.webkit.org/changeset/135791
>
WebKit Review Bot
Comment 3
2012-11-26 17:35:58 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug