[EFL] Unreviewed build fix after r135767 without Tiled Backing Store https://bugs.webkit.org/show_bug.cgi?id=103320

Unreviewed build fix.

Patch by Ryuan Choi <ryuan.choi@gmail.com> on 2012-11-26

* WebProcess/Plugins/Plugin.cpp:
* WebProcess/Plugins/Plugin.h:
(WebCore):

Canonical link: https://commits.webkit.org/121441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135791 268f45cc-cd09-0410-ab3c-d52691b4dbfc